<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Warmup Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="increment_string">Increment: </string>
    <string name="plates_on_side_string">Plates on each side</string>
    <string name="set_string">Set</string>
    <string name="starting_weight_hint">Enter starting weight</string>
    <string name="end_weight_hint">Enter working set weight</string>
    <string name="chnage_plates_menu_string">change Plates</string>
    <string name="title_activity_weights">Change Plates</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="delete_weight_dialog_string">Are you sure you want to delete this Plate?</string>
    <string name="delete_weight_title_string">Delete Weight</string>
    <string name="delete_string">Delete</string>
    <string name="no_string">No</string>
    <string name="add_weight_string">Add weight</string>
    <string name="add_weight_title_string">Add plate</string>
    <string name="add_weight_dialog_string">Enter the weight of the plate you want to add</string>
    <string name="done_string">Done</string>
    <string name="cancel_string">Cancel</string>
    <string name="no_weights_string">No plates</string>
    <string name="no_weights_dialog_string">There are no plates specified</string>
    <string name="bar_weight_string">Current bar weight</string>
    <string name="save_string">Save</string>
    <string name="bar_too_heavy_title_string">Bar too heavy</string>
    <string name="bar_too_heavy_message_string">The bar is too heavy for your starting weight. Either change the weight of the bar or enter a higher starting weight.</string>
    <string name="ok_string">OK</string>
    <string name="list_of_weights_string">List of weights</string>
    <string name="no_weight_added_string">You entered no weight</string>
    <string name="save_back_string">Save / Back</string>
    <string name="no_weight_hint_string">Please enter the weight of the plates you have in your gym. To do so click on the plus button above.</string>

</resources>
