<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/tv_bar_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bar_weight_string" />

    <LinearLayout
        android:id="@+id/bar_input_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/tv_bar_weight">

        <EditText
            android:id="@+id/et_bar_weight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/bar_weight_string"
            android:inputType="numberDecimal"
            android:layout_weight=".50"
            android:paddingRight="5dp" />

        <Button
            android:id="@+id/b_save_bar_weight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/save_string"
            android:layout_weight=".50" />

    </LinearLayout>

    <View
        android:id="@+id/divider_line"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_below="@+id/bar_input_container"
        android:layout_marginTop="5dp" />

    <TextView
        android:id="@+id/tv_list_of_weights"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_of_weights_string"
        android:layout_below="@+id/divider_line"
        android:layout_marginTop="5dp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".WeightsActivitz"
        android:layout_below="@+id/tv_list_of_weights" />

</RelativeLayout>
